New branch created

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -143,9 +143,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <%= yield %>
 <!--content-->
   <!-- Carousel
-    ================================================== -->
+    ================================================== --><!--
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+      <!-- Indicators --><!--
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -172,7 +172,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<div class="product">
 		<div class="container">
 			<div class="spec ">
-				<h3>Special Packs</h3>
+				<h3>Featured Listings</h3>
 				<div class="ser-t">
 					<b></b>
 					<span><i></i></span>
@@ -180,183 +180,84 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 			</div>
 				<div class=" con-w3l">
-							<div class="col-md-3 pro-1">
+							<div class="col-md-4 pro-1">
 								<div class="col-m">
 								<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-										<%= image_tag "app/of16.png", class: "img-responsive" %>
+										<%= image_tag "app/cakehouse.png", class: "img-responsive" %>
 									</a>
 									<div class="mid-1">
 										<div class="women">
-											<h6><a href="single.html">Moisturiser</a>(500 g)</h6>							
+											<h6><a href="single.html">Valentine Cake House</a></h6>							
 										</div>
 										<div class="mid-2">
-											<p ><label>$7.00</label><em class="item_price">$6.00</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
+											<p>Biggest cake supplier in Nairobi</p>
 											<div class="clearfix"></div>
 										</div>
-											<div class="add add-2">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="6.00" data-quantity="1" data-image="images/of16.png">Add to Cart</button>
+										<div class="block">
+											<div class="starbox small ghosting"> </div>
+										</div>
+										<br />
+										<div class="add" align="right">
+											<!-- <button class="btn btn-danger my-cart-btn my-cart-b" data-id="25" data-name="Peach Halves" data-summary="summary 25" data-price="4.50" data-quantity="1" data-image="images/of25.png">Add to Cart</button> -->
+										   	<!-- I'm putting a fake star rating system here, it needs to be called and replaced from the database --><br />
+										   	<%= image_tag "app/viewer.png", class: "img-responsive" %>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 pro-1">
+							<div class="col-md-4 pro-1">
 								<div class="col-m">
 									<a href="#" data-toggle="modal" data-target="#myModal18" class="offer-img">
-										<%= image_tag "app/of17.png", class: "img-responsive" %>
+										<%= image_tag "app/cakehouse.png", class: "img-responsive" %>
 									</a>
 									<div class="mid-1">
 										<div class="women">
-											<h6><a href="single.html">  Lady Finger</a>(250 g)</h6>							
+											<h6><a href="single.html">Valentine Cake House</a></h6>							
 										</div>
 										<div class="mid-2">
-											<p ><label>$5.00</label><em class="item_price">$4.50</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
+											<p>Biggest cake supplier in Nairobi</p>
 											<div class="clearfix"></div>
 										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="4.50" data-quantity="1" data-image="images/of17.png">Add to Cart</button>
+										<div class="block">
+											<div class="starbox small ghosting"> </div>
+										</div>
+										<br />
+										<div class="add" align="right">
+											<!-- <button class="btn btn-danger my-cart-btn my-cart-b" data-id="25" data-name="Peach Halves" data-summary="summary 25" data-price="4.50" data-quantity="1" data-image="images/of25.png">Add to Cart</button> -->
+										   	<!-- I'm putting a fake star rating system here, it needs to be called and replaced from the database --><br />
+										   	<%= image_tag "app/viewer.png", class: "img-responsive" %>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 pro-1">
+							<div class="col-md-4 pro-1">
 								<div class="col-m">
 									<a href="#" data-toggle="modal" data-target="#myModal19" class="offer-img">
-										<%= image_tag "app/of18.png", class: "img-responsive" %>
+										<%= image_tag "app/cakehouse.png", class: "img-responsive" %>
 									</a>
 									<div class="mid-1">
 										<div class="women">
-											<h6><a href="single.html"> Ribbon</a>(1 pc)</h6>							
+											<h6><a href="single.html">Valentine Cake House</a></h6>							
 										</div>
 										<div class="mid-2">
-											<p ><label>$4.00</label><em class="item_price">$3.50</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
+											<p>Biggest cake supplier in Nairobi</p>
+											
 											<div class="clearfix"></div>
 										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="3.50" data-quantity="1" data-image="images/of18.png">Add to Cart</button>
+										<div class="block">
+											<div class="starbox small ghosting"> </div>
 										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3 pro-1">
-								<div class="col-m">
-									<a href="#" data-toggle="modal" data-target="#myModal20" class="offer-img">
-										<%= image_tag "app/of19.png", class:"img-responsive" %>
-									</a>
-									<div class="mid-1">
-										<div class="women">
-											<h6><a href="single.html">Grapes</a>(500 g)</h6>							
-										</div>
-										<div class="mid-2">
-											<p ><label>$1.00</label><em class="item_price">$0.80</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="0.80" data-quantity="1" data-image="images/of19.png">Add to Cart</button>
+										<br />
+										<div class="add" align="right">
+											<!-- <button class="btn btn-danger my-cart-btn my-cart-b" data-id="25" data-name="Peach Halves" data-summary="summary 25" data-price="4.50" data-quantity="1" data-image="images/of25.png">Add to Cart</button> -->
+										   	<!-- I'm putting a fake star rating system here, it needs to be called and replaced from the database --><br />
+										   	<%= image_tag "app/viewer.png", class: "img-responsive" %>
 										</div>
 									</div>
 								</div>
 							</div>
 							
-							<div class="col-md-3 pro-1">
-								<div class="col-m">
-								<a href="#" data-toggle="modal" data-target="#myModal21" class="offer-img">
-										<%= image_tag "app/of20.png", class: "img-responsive" %>
-									</a>
-									<div class="mid-1">
-										<div class="women">
-											<h6><a href="single.html">Clips</a>(1 pack)</h6>							
-										</div>
-										<div class="mid-2">
-											<p ><label>$7.00</label><em class="item_price">$6.00</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="6.00" data-quantity="1" data-image="images/of20.png">Add to Cart</button>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3 pro-1">
-								<div class="col-m">
-									<a href="#" data-toggle="modal" data-target="#myModal22" class="offer-img">
-										<%= image_tag "app/of21.png", class:"img-responsive" %>
-									</a>
-									<div class="mid-1">
-										<div class="women">
-											<h6><a href="single.html">Conditioner</a>(250 g)</h6>							
-										</div>
-										<div class="mid-2">
-											<p ><label>$5.00</label><em class="item_price">$4.50</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="4.50" data-quantity="1" data-image="images/of21.png">Add to Cart</button>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3 pro-1">
-								<div class="col-m">
-									<a href="#" data-toggle="modal" data-target="#myModal23" class="offer-img">
-										<%= image_tag "app/of22.png", class: "img-responsive" %>
-									</a>
-									<div class="mid-1">
-										<div class="women">
-											<h6><a href="single.html">Cleaner</a>(250 kg)</h6>							
-										</div>
-										<div class="mid-2">
-											<p ><label>$4.00</label><em class="item_price">$3.50</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="3.50" data-quantity="1" data-image="images/of22.png">Add to Cart</button>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3 pro-1">
-								<div class="col-m">
-									<a href="#" data-toggle="modal" data-target="#myModal24" class="offer-img">
-										<%= image_tag "app/of23.png", class:"img-responsive" %>
-									</a>
-									<div class="mid-1">
-										<div class="women">
-											<h6><a href="single.html">Gel</a>(150 g)</h6>							
-										</div>
-										<div class="mid-2">
-											<p ><label>$1.00</label><em class="item_price">$0.80</em></p>
-											  <div class="block">
-												<div class="starbox small ghosting"> </div>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-											<div class="add">
-										   <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="0.80" data-quantity="1" data-image="images/of23.png">Add to Cart</button>
-										</div>
-									</div>
-								</div>
-							</div>
+							
 							<div class="clearfix"></div>
 						 </div>
 		</div>
@@ -364,7 +265,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--footer--> <br /><br /><br />
 <div class="footer">
 	<div class="container">
-		<div class="col-md-3 footer-grid">
+		<div class=""><!--     ////If ever we need the about us to be down there, just uncomment this out.
 			<h3>About Us</h3>
 			<p>Nam libero tempore, cum soluta nobis est eligendi 
 				optio cumque nihil impedit quo minus id quod maxime 
@@ -377,18 +278,18 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<li><a href="kitchen.html">Corporate</a></li>
 				<li><a href="care.html">Casual</a></li>
 				<li><a href="hold.html">Personal</a></li>						 
-				<!--<li><a href="codes.html">Short Codes</a></li>-->
-				<li><a href="contact.html">Contact</a></li>
+				<!--<li><a href="codes.html">Short Codes</a></li>-->   <!--   /////Same here
+				<!--<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<div class="col-md-3 footer-grid ">
 			<h3>Customer Services</h3>
 			<ul>
-				<!--<li><a href="shipping.html">Shipping</a></li>-->
+				<!--<li><a href="shipping.html">Shipping</a></li>-->     <!-- .////And here too
 				<li><a href="terms.html">Terms & Conditions</a></li>
 				<li><a href="faqs.html">Faqs</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<!--<li><a href="offer.html">Online Shopping</a></li>-->					 
+				<!--<li><a href="offer.html">Online Shopping</a></li>-->	<!--  ///Here all				 
 				 
 			</ul>
 		</div>
@@ -400,11 +301,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<li><a href="wishlist.html">Wishlist</a></li>
 				
 			</ul>
-		</div>
-		<div class="clearfix"></div>
+		</div>  -->
 			<div class="footer-bottom">
-				<h2 ><a href="index.html">Eventicize<span>Find supplier listings for all events</span></a></h2>
-				<p class="fo-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				<h2><a href="index.html">Eventicize</a></h2>
 				<ul class="social-fo">
 					<li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="#" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -423,7 +322,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					</div>
 					<div class="clearfix"></div>
 					
-					</div>
+				</div>
 			</div>
 		<div class="copy-right">
 			<p> &copy; 2016 Eventicize. All Rights Reserved</p>
