Pagination for service listing done

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3338,6 +3338,9 @@ span.line2 {
 img.img-responsive {
     margin: auto;
 }
+.img-fix-height{
+    height: 400px !important;
+}
 .mydetails , .myskills {
 	background-color: rgba(129, 224, 144, 0.14);
 }
