Modified the landing page

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -27,6 +27,8 @@ p,label{
 ul{
 	margin:0;
 	padding:0;
+  float: right;
+  margin-top: 2.0em;
 }
 
 /*--popup--*/
@@ -213,8 +215,8 @@ img.img-head {
 }
 .card li a{
 	display:inline-block;
-	color: #999;
-    font-size: 1.3em;
+	color: #ffffff;
+  font-size: 1.3em;
 	margin:0 0.5em;
 }
 .card li a i{
@@ -475,7 +477,7 @@ span.fa.fa-shopping-cart.my-cart-icon {
 /*-- //header --*/
 /*--banner--*/
 .top-top-banner{
-    background-image: url(<%= asset_path 'app/banner.jpg' %>);
+    background-image: url(<%= asset_path 'app/banner1.jpg' %>);
 }
 .banner-info {
     margin:8em 0;
