1. added database.yml to gitignore 2. Fixed modal on service listings 3. Make address clickable

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3542,6 +3542,10 @@ span.shortline5 {
 /*-- /Gallery --*/
 /*-- Footer --*/
 
+.contact-info {
+    margin-top: 10%;
+}
+
 .contact-info h4 {
 	font-family: 'Cinzel', serif;
 	font-size:20px;
@@ -3732,7 +3736,7 @@ hr{
 	.mydetails .social-icons {
     padding: 1.2em 0 0;
 }
-	.contact-info {
+    .contact-info {
     margin-top: 30px;
 }
 }
