--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -26,7 +26,7 @@
 					<h3>Who we are</h3>
 					<p class="short_desc_text"><%= @profile.short_desc %><i class="short_desc fa fa-pencil" aria-hidden="true"></i></p>
 					<div class="contact-info">
-						<h3>Where you can find us</h3>
+						<h3>Where you can find us <i class="address_book fa fa-pencil" aria-hidden="true"></i></h3>
 						<p>We are located in the 3 major cities in Kenya.</p>
 						<i aria-hidden="true"></i>
                         <div class="footer-info">
