WOrked on the profile

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3328,6 +3328,7 @@ span.line2 {
 .about-me {
 	padding:0;
 	margin:0 auto;
+  background-color: #f2f2f2;
 }
 .about-me h3 {
 	color:#A1B3A4;
@@ -3344,10 +3345,11 @@ img.img-responsive {
     height: 400px !important;
 }
 .mydetails , .myskills {
-	background-color: rgba(129, 224, 144, 0.14);
+	background-color: #ffffff;
 }
 .mydetails {
 	padding: 6%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .mydetails h3 {
 	color:#000;
@@ -3385,7 +3387,8 @@ img.img-responsive {
 	background-position:-120px 0px;
 }
 .myskills {
-	padding:2em 0;
+	padding:2em 2em;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 .myskills h3 {
 	color:#000;
@@ -3543,6 +3546,9 @@ span.shortline5 {
 }
 /*-- /Gallery --*/
 /*-- Footer --*/
+.some-border {
+  border-top: 1px solid #f2f2f2;
+}
 
 .contact-info h4 {
 	font-family: 'Cinzel', serif;
