Implemented search and list of a person's services on profile

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -522,6 +522,13 @@ span.fa.fa-shopping-cart.my-cart-icon {
   border-radius: 5px;
 }
 
+.btn-search{
+    width: 120px;
+    height: 41px;
+    background-color: #e67e22;
+    color: #fff;
+}
+
 .search-no-padding-right{
   padding-right: 0;
 }
@@ -3631,6 +3638,7 @@ hr{
 /*-- /Footer --*/
 /*-- sliding --*/
 .slideanim {visibility:hidden; padding: 4%;}
+.move-down { min-height: 400px; }
 .slide {
     /* The name of the animation */
     animation-name: slide;
