--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -118,6 +118,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<!-- <li><a href="wishlist.html" ><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a></li> -->
 			<li><%= link_to "Login", { controller: :access, action: :login }, { class: "fa fa-user", "aria-hidden" => "true" } %></li>
 			<li><%= link_to "Sign up", { controller: :users, action: :new }, { class: "fa fa-user", "aria-hidden" => "true" } %></li>
+			<li><%= link_to 'Twitter', '/auth/twitter' %></li>
 			<!--<li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
 			<li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>-->
 		</ul>
