Done with the single listing page

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -136,14 +136,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="search-form container overlay">
 				<form action="#" method="post">
 					<div class="col-md-6 col-sm-4 col-xs-12 search-no-padding-left search-no-padding-right">
-						<input type="text" placeholder="Search" name="Search">
+						<input type="text" placeholder="Supplier or Service" name="Search" />
 					</div>
 					<div class="col-md-4 col-sm-4 hidden-xs search-no-padding-right">
-						<select>
-							<option>Select location</option>                                     <!-- fix the locations with stella -->
-							<option>Accra</option>
-							<option>Kumasi</option>
-						</select>
+						<input type="text" placeholder="Location" name="location" />
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-12 search-no-padding">
 						<button class="search-no-border" type="submit">Search</button>
@@ -487,7 +483,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						 </div>
 		</div>
 	</div>
-<!--footer--> <br /><br /><br />
+<!--footer-->
 <div class="footer">
 	<div class="container">
 		<div class=""><!--     ////If ever we need the about us to be down there, just uncomment this out.
@@ -528,7 +524,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			</ul>
 		</div>  -->
 			<div class="footer-bottom">
-				<h2><a href="index.html">Eventicize</a></h2>
+				<h2><a href="index.html">Evventor</a></h2>
 				<ul class="social-fo">
 					<li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="#" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
